# eventsourcing-mongodb

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
eventsourcing_mongodb/: datastore.py  factory.py
eventsourcing_mongodb/recorders/: __init__.py  aggregate.py  application.py  process.py
tests/: test_aggregate_recorder.py  test_datastore.py
